--- a/schedule.css
+++ b/schedule.css
@@ -40,23 +40,23 @@ ul{
 }
 
 .ge{
-    background-color: #aaa;
+    background-color: #d3b066;
 }
 .ka{
-    background-color: #fff;
+    background-color: #c73218;
 }
 .su{
-    background-color: #aaa;
+    background-color: #0f68ee;
 }
 .mo{
-    background-color: #fff;
+    background-color: #219112;
 }
 .ki{
-    background-color: #aaa;
+    background-color: #fffb00;
 }
 .do{
-    background-color: #fff;
+    background-color: #504c2b;
 }
 .ni{
-    background-color: #aaa;
+    background-color: #f5e33f;
 }
