--- a/schedule.css
+++ b/schedule.css
@@ -39,24 +39,24 @@ ul{
     font-size: large;
 }
 
-.ge{
+.mo{
     background-color: #d3b066;
 }
-.ka{
+.tu{
     background-color: #c73218;
 }
-.su{
+.we{
     background-color: #0f68ee;
 }
-.mo{
+.th{
     background-color: #219112;
 }
-.ki{
+.fr{
     background-color: #fffb00;
 }
-.do{
+.sa{
     background-color: #504c2b;
 }
-.ni{
+.su{
     background-color: #f5e33f;
 }
