--- a/schedule.css
+++ b/schedule.css
@@ -40,23 +40,23 @@ ul{
 }
 
 .mo{
-    background-color: #d3b066;
+    color: #d3b066;
 }
 .tu{
-    background-color: #c73218;
+    color: #c73218;
 }
 .we{
-    background-color: #0f68ee;
+    color: #0f68ee;
 }
 .th{
-    background-color: #219112;
+    color: #219112;
 }
 .fr{
-    background-color: #fffb00;
+    color: #fffb00;
 }
 .sa{
-    background-color: #504c2b;
+    color: #504c2b;
 }
 .su{
-    background-color: #f5e33f;
+    color: #f5e33f;
 }
